<resources>
    <string name="app_name">My Application</string>
    <string name="search">search</string>
    <string name="most_view">Most View</string>
    <string name="most_emailed">Most Emailed</string>
    <string name="one_day">one day</string>
    <string name="sort_by">Sort by</string>
    <string name="seven_days">seven days</string>
    <string name="one_month">one month</string>
</resources>