<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by"
        app:showAsAction="always">
        <!-- movies submenu -->
        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/oneDay"
                    android:checked="true"

                    android:title="@string/one_day" />

                <item
                    android:id="@+id/sevenDays"
                    android:title="@string/seven_days" />

                <item
                    android:id="@+id/oneMonth"
                    android:title="@string/one_month" />
            </group>
        </menu>
    </item>

</menu>